# lea

./: CMakeLists.txt  README.md
include/lea/: api.hpp
include/lea/engine/: drawable.hpp  ecs.hpp  game.hpp  interpreter.hpp  scene.hpp
include/lea/engine/component/: display.hpp
include/lea/engine/ecs/: component.hpp  entity.hpp  system.hpp  typename.hpp
include/lea/engine/primitive/: quad.hpp
include/lea/math/: random.hpp
include/lea/system/: directory.hpp  random.hpp  window.hpp
include/lea/tools/: value_ptr.hpp
src/demo/: CMakeLists.txt  sandbox.cpp
src/demo/ecs/: ecs.cpp
src/demo/sandbox/: sandbox.cpp
src/demo/sandbox/res/: config.lua
src/lib/: CMakeLists.txt
src/lib/engine/: drawable.cpp  game.cpp  interpreter.cpp  scene.cpp
src/lib/engine/primitive/: quad.cpp
src/lib/math/: random.cpp
src/lib/system/: directory.cpp  random.cpp  window.cpp
